--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,10 +1,30 @@
 
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.main.allow-bean-definition-overriding=true
+#spring.security.filter.dispatcher-types=REQUEST,ASYNC,FORWARD,ERROR
+#spring.security.enabled=false
+#
+## Desactivar Flyway en tests (si no tenés migraciones adaptadas a H2)
+#spring.flyway.enabled=false
+#security.jwt.secret=UnSecretoSuperSeguroDeAlMenos32Caracteres
+#security.jwt.expiration=3600000
+
+
+
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.h2.console.enabled=true
 spring.main.allow-bean-definition-overriding=true
 spring.security.filter.dispatcher-types=REQUEST,ASYNC,FORWARD,ERROR
@@ -12,5 +32,7 @@ spring.security.enabled=false
 
 # Desactivar Flyway en tests (si no tenés migraciones adaptadas a H2)
 spring.flyway.enabled=false
+
+# JWT para los tests
 security.jwt.secret=UnSecretoSuperSeguroDeAlMenos32Caracteres
 security.jwt.expiration=3600000
